custom-apps/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: plex-support
spec:
  selector:
    app: prowlarr
  ports:
    - port: 9696
      protocol: TCP
      targetPort: 9696
  sessionAffinity: None
  type: ClusterIP
