custom-apps/prowlarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/secure-backends: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    hajimari.io/enable: "true"
    hajimari.io/icon: "cloud-download"
    hajimari.io/appName: "Prowlarr"
  labels:
    app: prowlarr-ingress
  name: prowlarr-ingress
  namespace: plex-support
spec:
  ingressClassName: traefik
  rules:
    - host: prowlarr.finnhartshorn.com
      http:
        paths:
          - backend:
              service:
                name: prowlarr
                port:
                  number: 9696
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - prowlarr.finnhartshorn.com
      secretName: wildcard-tls
